--- a/jspython/package.json
+++ b/jspython/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jspython",
+  "name": "ECG-Analyser",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "yanjiasen4 <13122169550@163.com>",
